# xftools

./: .travis.yml  CMakeLists.txt  README.md  methylation_tools.cpp
DMR_generator/: CMakeLists.txt  DMR_generator.cpp  README.md
RPKM_maker/: CMakeLists.txt  README.md  RPKM_maker.cpp
SLMextend/: CMakeLists.txt  README.md  SLMextend.cpp
SLMextend/example_data/: step5b_each5_7413_SLM.gff
SNPmask/: CMakeLists.txt  README.md  SNPmask.cpp
TE_reannotate/: CMakeLists.txt  README.md  TE_reannotate.cpp  Transcript_Merge.cpp
TE_reannotate/example_data/: meh.bam.bai  meh.bedgraph  meh.gff
at_compare/: CMakeLists.txt  README.md  at_compare.cpp
at_compare/example_data/: TAIR10_GFF3-gene_only_MV.gff
bam2bed/: CMakeLists.txt  README.md  bam2bed.cpp
bam_2_w1_extractor/: CMakeLists.txt  README.md  bam_2_w1_extractor.cpp
bam_2_w1_extractor/example_data/: test.bam  test.sam
bam_2_w1_extractor/seqan/include/seqan/misc/: name_store_cache.h
context_udstream/: CMakeLists.txt  README.md  context_udstream.cpp
cytosine_abundance/: CMakeLists.txt  README.md  cytosine_abundance.cpp
cytosine_abundance/example_data/: TAIR10_reference_ChrC.fa  region.gff
extract_methylation/: CMakeLists.txt  README.md  extract_methylation.cpp
fast_extract/: CMakeLists.txt  README.md  fast_extract.cpp
fast_extract/example_data/: list_to_extract.txt
fasta_insert/: CMakeLists.txt  README.md  fasta_insert.cpp
fasta_insert/example_data/: example_insert.fasta
feature_GC_ratio/: CMakeLists.txt  README.md  feature_GC_ratio.cpp
gff_feature_merge/: CMakeLists.txt  README.md  gff_feature_merge.cpp
gff_feature_merge/example_data/: reads_only_in_iae.gff
mapper/: CMakeLists.txt  README.md  build_reference.cpp  common.h  mapper.cpp
mapper_2/: CMakeLists.txt  README.md  bamwrite_test.cpp  build_reference.cpp  mapper.cpp  mapper2.cpp
max_wba/: CMakeLists.txt  README.md  max_wba.cpp
methyl_coverage/: CMakeLists.txt  README.md  methyl_coverage.cpp
overlap/: CMakeCache.txt  CMakeLists.txt  README.md  common.h  feature.cpp  overlap.cpp
overlap/example_data/: fileA.gff  fileB.gff
pausing_index/: CMakeLists.txt  README.md  pausing_index.cpp
pausing_index/example_data/: example_annotation.gff
revcompl_matepair/: CMakeLists.txt  README.md  revcompl_matepair.cpp
sRNA_mismatch_aligner/: CMakeLists.txt  README.md  sRNA_mismatch_aligner.cpp
scripts/samtools/: readme.md
seqan/include/seqan/gff_io/: gff_io_base.h
seqan/tests/alfsc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_alfsc  test_alfsc.cpp  test_alfsc.h
single-c_combine/: CMakeLists.txt  README.md  TESTING.md  single-c_combine.cpp
single-c_combine/example_data/: example_rep1.w1.gff  example_rep2.w1.gff  old_program_result.w1_rep1_rep2.gff  old_program_result.w1_rep2_rep1.gff
template/: CMakeLists.txt  README.md  TOOLNAME.cpp
trim/: CMakeLists.txt  README.md  trim.cpp
tss_label/: CMakeLists.txt  README.md  tss_label.cpp
tsv_extract/: CMakeLists.txt  README.md  tsv_extract.cpp
unique_read_extractor/: CMakeLists.txt  README.md  unique_read_extractor.cpp
w1_creator/: CMakeLists.txt  w1_creator.cpp
w1_creator/example_data/: small_CX_report.txt
w50_creator/: CMakeLists.txt  README.md  w50_creator.cpp  w50_functions.cpp  w50_functions.h  w50_tests.cpp
wba/: CMakeLists.txt  README.md  common.h  key.cpp  wba.cpp
wba/example_data/: TAIR10_TE_Anno.XF.gff  test_TE_anno.gff
weighted_w1_extractor/: CMakeLists.txt  README.md  weighted_w1_extractor.cpp
